--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
 </head>
 <body>
-  <div>
+  <!-- <div>
     <img class="button"id="dot" src="dot.png">
-  </div>
+  </div> -->
   <div class="wrap">
-  <!-- <div class="line"><img id="yi" src="line.png"></div> -->
+  <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
   <div class="text"><img id="ling" src="ling.png"></div>
   <div class="text"><img id="zhong" src="zhong.png"></div>
   <div class="text"><img id="she" src="she.png"></div>
   <div class="text"><img id="ji" src="ji.png"></div>
 </div>
-  <div class="wrap2">
+  <!-- <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
   <div class="text"><img id="zhong" src="zhong.png"></div>
   <div class="text"><img id="she" src="she.png"></div>
@@ -31,7 +31,7 @@
 <div class="text"><img id="zhong" src="zhong.png"></div>
 <div class="text"><img id="she" src="she.png"></div>
 <div class="text"><img id="ji" src="ji.png"></div>
-</div>
+</div> -->
   <!-- <div class="line gravity"><img id="line" src="line.png"></div> -->
 </body>
 </html>
