--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </div> -->
   <div class="wrap">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
-  <div class="text"><img id="ling" src="ling.png"></div>
-  <div class="text"><img id="zhong" src="zhong.png"></div>
-  <div class="text"><img id="she" src="she.png"></div>
-  <div class="text"><img id="ji" src="ji.png"></div>
+  <div class="text"><img id="ling text" src="ling.png"></div>
+  <div class="text"><img id="zhong text" src="zhong.png"></div>
+  <div class="text"><img id="she text" src="she.png"></div>
+  <div class="text"><img id="ji text" src="ji.png"></div>
 </div>
   <!-- <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
