--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
   <div class="wrap">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
   <div class="text"><img id="ling text" src="ling.png"></div>
+  <div class="text"><img id="ji text" src="yi.png"></div>
   <div class="text"><img id="zhong text" src="zhong.png"></div>
   <div class="text"><img id="she text" src="she.png"></div>
   <div class="text"><img id="ji text" src="ji.png"></div>
+  <div class="text"><img id="shi text" src="shi.png"></div>
+  <div class="text"><img id="yan text" src="yan.png"></div>
+  <div class="text"><img id="shi2 text" src="shi2.png"></div>
+  <div class="text"><img id="gong text" src="gong.png"></div>
+  <div class="text"><img id="zuo text" src="zuo.png"></div>
+  <div class="text"><img id="shi2 text" src="shi2.png"></div>
+  <div class="text"><img id="ying text" src="ying.png"></div>
+  <div class="text"><img id="zao text" src="zao.png"></div>
+  <div class="text"><img id="shi2 text" src="shu.png"></div>
 </div>
   <!-- <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
