--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
   <script type="text/javascript" src="jGravity.js"></script>
 
 </head>
-<body>
+<body scroll="no">
   <!-- <div>
     <img class="button"id="dot" src="dot.png">
   </div> -->
   <div class="wrap">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
   <div class="text"><img id="ling text" src="ling.png"></div>
-  <div class="text"><img id="ji text" src="yi.png"></div>
+  <div class="text"><img id="yi text" src="yi.png"></div>
+  <div class="text"><img id="zhong text" src="zhong.png"></div>
+  <div class="text"><img id="she text" src="she.png"></div>
+  <div class="text"><img id="ji text" src="ji.png"></div>
+  <div class="text"><img id="ling text" src="ling.png"></div>
+  <div class="text"><img id="yi text" src="yi.png"></div>
   <div class="text"><img id="zhong text" src="zhong.png"></div>
   <div class="text"><img id="she text" src="she.png"></div>
   <div class="text"><img id="ji text" src="ji.png"></div>
