js update again

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div> -->
   <div class="wrap">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
-  <div class="text"><img id="ling text" src="ling.png"></div>
+  <div class="text"><img id="ling2 text" src="ling2.png"></div>
   <div class="text"><img id="yi text" src="yi.png"></div>
   <div class="text"><img id="zhong text" src="zhong.png"></div>
   <div class="text"><img id="she text" src="she.png"></div>
