--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- <div>
     <img class="button"id="dot" src="dot.png">
   </div> -->
-  <div class="wrap">
+  <div class="wrap" href="drag.html">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
   <div class="text"><img id="ling2 text" src="ling2.png"></div>
   <div class="text"><img id="yi text" src="yi.png"></div>
