--- a/drag.html
+++ b/drag.html
@@ -5,7 +5,7 @@
         #div1{
             height: 1000px;
         }
-        #div2{
+        #ling2{
             position:absolute;
             width:100px;
             /* position: absolute;
@@ -19,9 +19,7 @@
 </head>
 <body>
 <div id="div1">
-    <div id="div2">
-      <img src="ling2.png">
-    </div>
+      <img id="ling2"src="ling2.png">
 
 </div>
 <script>
@@ -64,7 +62,7 @@
             },false);
         }
     }
-    var div2 = document.getElementById("div2");
+    var div2 = document.getElementById("ling2");
     div2.addEventListener("mousedown",function(){
         down();
     },false);
