--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   </div> -->
   <div class="wrap">
   <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
-  <img id="ling2 text" src="ling2.png">
-  <img id="yi text" src="yi.png">
-  <img id="zhong text" src="zhong.png">
-  <img id="she text" src="she.png">
-  <img id="ji text" src="ji.png">
-  <!-- <div class="text"><img id="ling text" src="ling.png"></div> -->
-  <!-- <div class="text"><img id="yi text" src="yi.png"></div>
+  <div class="text"><img id="ling2 text" src="ling2.png"></div>
+  <div class="text"><img id="yi text" src="yi.png"></div>
+  <div class="text"><img id="zhong text" src="zhong.png"></div>
+  <div class="text"><img id="she text" src="she.png"></div>
+  <div class="text"><img id="ji text" src="ji.png"></div>
+  <div class="text"><img id="ling text" src="ling.png"></div>
+  <div class="text"><img id="yi text" src="yi.png"></div>
   <div class="text"><img id="zhong text" src="zhong.png"></div>
   <div class="text"><img id="she text" src="she.png"></div>
   <div class="text"><img id="ji text" src="ji.png"></div>
@@ -33,7 +33,7 @@
   <div class="text"><img id="shi2 text" src="shi2.png"></div>
   <div class="text"><img id="ying text" src="ying.png"></div>
   <div class="text"><img id="zao text" src="zao.png"></div>
-  <div class="text"><img id="shi2 text" src="shu.png"></div> -->
+  <div class="text"><img id="shi2 text" src="shu.png"></div>
 </div>
   <!-- <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
