--- a/drag.html
+++ b/drag.html
@@ -1,6 +1,9 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <title>适配移动端的拖动效果</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="script-drag.js"></script>
+    <script type="text/javascript" src="jGravity.js"></script>
     <style>
         #div1{
             height: 1000px;
@@ -8,12 +11,6 @@
         #ling2{
             position:absolute;
             width:100px;
-            /* position: absolute;
-            top:0;
-            left:0;
-            width: 100px;
-            height: 100px;
-            background: #bbbbbb; */
         }
     </style>
 </head>
@@ -22,65 +19,5 @@
       <img id="ling2"src="ling2.png">
 
 </div>
-<script>
-    var flag = false;
-    var cur = {
-        x:0,
-        y:0
-    }
-    var nx,ny,dx,dy,x,y ;
-    function down(){
-        flag = true;
-        var touch ;
-        if(event.touches){
-            touch = event.touches[0];
-        }else {
-            touch = event;
-        }
-        cur.x = touch.clientX;
-        cur.y = touch.clientY;
-        dx = div2.offsetLeft;
-        dy = div2.offsetTop;
-    }
-    function move(){
-        if(flag){
-            var touch ;
-            if(event.touches){
-                touch = event.touches[0];
-            }else {
-                touch = event;
-            }
-            nx = touch.clientX - cur.x;
-            ny = touch.clientY - cur.y;
-            x = dx+nx;
-            y = dy+ny;
-            div2.style.left = x+"px";
-            div2.style.top = y +"px";
-            //阻止页面的滑动默认事件
-            document.addEventListener("touchmove",function(){
-                event.preventDefault();
-            },false);
-        }
-    }
-    var div2 = document.getElementById("ling2");
-    div2.addEventListener("mousedown",function(){
-        down();
-    },false);
-    div2.addEventListener("touchstart",function(){
-        down();
-    },false)
-    div2.addEventListener("mousemove",function(){
-        move();
-    },false);
-    div2.addEventListener("touchmove",function(){
-        move();
-    },false)
-    document.body.addEventListener("mouseup",function(){
-        flag = false;
-    },false);
-    div2.addEventListener("touchend",function(){
-        flag = false;
-    },false)
-</script>
 
 </body></html>
