--- a/drag.html
+++ b/drag.html
@@ -1,23 +1,16 @@
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>适配移动端的拖动效果</title>
+    <link rel="stylesheet" href="style-drag.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script-drag.js"></script>
     <script type="text/javascript" src="jGravity.js"></script>
-    <style>
-        #div1{
-            height: 1000px;
-        }
-        #ling2{
-            position:absolute;
-            width:100px;
-        }
-    </style>
+
 </head>
 <body>
-<div id="div1">
+     <div id="div1">
       <img id="ling2"src="ling2.png">
+     </div>
 
-</div>
-
-</body></html>
+</body>
+</html>
