--- a/index.html
+++ b/index.html
@@ -7,18 +7,16 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="script-home.js"></script>
   <script type="text/javascript" src="jGravity.js"></script>
-
 </head>
 <body scroll="no">
-  <!-- <div>
-    <img class="button"id="dot" src="dot.png">
-  </div> -->
+
+
+
   <div class="wrap">
-  <!-- <div class="line"><img id="yi" src="line2.png"></div> -->
   <div class="text"><img id="ling2 text" src="ling2.png"></div>
   <div class="text"><img id="yi text" src="yi.png"></div>
   <div class="text"><img id="zhong text" src="zhong.png"></div>
-  <!-- <div class="text"><img id="she text" src="she.png"></div>
+  <div class="text"><img id="she text" src="she.png"></div>
   <div class="text"><img id="ji text" src="ji.png"></div>
   <div class="text"><img id="ling text" src="ling.png"></div>
   <div class="text"><img id="yi text" src="yi.png"></div>
@@ -33,7 +31,7 @@
   <div class="text"><img id="shi2 text" src="shi2.png"></div>
   <div class="text"><img id="ying text" src="ying.png"></div>
   <div class="text"><img id="zao text" src="zao.png"></div>
-  <div class="text"><img id="shi2 text" src="shu.png"></div> -->
+  <div class="text"><img id="shi2 text" src="shu.png"></div>
 </div>
   <!-- <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
