--- a/index.html
+++ b/index.html
@@ -13,38 +13,33 @@
 
 
   <div class="wrap">
-  <div class="text"><img id="ling2 text" src="ling2.png"></div>
-  <div class="text"><img id="yi text" src="yi.png"></div>
-  <div class="text"><img id="zhong text" src="zhong.png"></div>
-  <div class="text"><img id="she text" src="she.png"></div>
-  <div class="text"><img id="ji text" src="ji.png"></div>
-  <div class="text"><img id="ling text" src="ling.png"></div>
-  <div class="text"><img id="yi text" src="yi.png"></div>
-  <div class="text"><img id="zhong text" src="zhong.png"></div>
-  <div class="text"><img id="she text" src="she.png"></div>
-  <div class="text"><img id="ji text" src="ji.png"></div>
-  <div class="text"><img id="shi text" src="shi.png"></div>
-  <div class="text"><img id="yan text" src="yan.png"></div>
-  <div class="text"><img id="shi2 text" src="shi2.png"></div>
-  <div class="text"><img id="gong text" src="gong.png"></div>
-  <div class="text"><img id="zuo text" src="zuo.png"></div>
-  <div class="text"><img id="shi2 text" src="shi2.png"></div>
-  <div class="text"><img id="ying text" src="ying.png"></div>
-  <div class="text"><img id="zao text" src="zao.png"></div>
-  <div class="text"><img id="shi2 text" src="shu.png"></div>
+  <div class="text"><img id="ling2" src="ling2.png"></div>
+  <div class="text"><img id="yi" src="yi.png"></div>
+  <div class="text"><img id="zhong" src="zhong.png"></div>
+  <div class="text"><img id="she" src="she.png"></div>
+  <div class="text"><img id="ji" src="ji.png"></div>
 </div>
-  <!-- <div class="wrap2">
+  <div class="wrap2">
   <div class="text"><img id="ling" src="ling.png"></div>
+  <div class="text"><img id="yi" src="yi.png"></div>
   <div class="text"><img id="zhong" src="zhong.png"></div>
   <div class="text"><img id="she" src="she.png"></div>
   <div class="text"><img id="ji" src="ji.png"></div>
 </div>
 <div class="wrap3">
-<div class="text"><img id="ling" src="ling.png"></div>
-<div class="text"><img id="zhong" src="zhong.png"></div>
-<div class="text"><img id="she" src="she.png"></div>
-<div class="text"><img id="ji" src="ji.png"></div>
-</div> -->
-  <!-- <div class="line gravity"><img id="line" src="line.png"></div> -->
+  <div class="text"><img id="shi" src="shi.png"></div>
+  <div class="text"><img id="yan" src="yan.png"></div>
+  <div class="text"><img id="shi2" src="shi2.png"></div>
+  <div class="text"><img id="gong" src="gong.png"></div>
+  <div class="text"><img id="zuo" src="zuo.png"></div>
+</div>
+<div class="wrap4">
+  <div class="text"><img id="shi2" src="shi2.png"></div>
+  <div class="text"><img id="ying" src="ying.png"></div>
+  <div class="text"><img id="zao" src="zao.png"></div>
+  <div class="text"><img id="shi2" src="shu.png"></div>
+</div>
+
+</div>
 </body>
 </html>
