--- a/index.html
+++ b/index.html
@@ -6,38 +6,29 @@
   <link rel="stylesheet" href="style-home.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="script-home.js"></script>
+<script src="https://unpkg.com/interactjs@1.3.4/dist/interact.min.js"></script>
   <script type="text/javascript" src="jGravity.js"></script>
 </head>
 <body scroll="no">
 
 
 
+
   <div class="wrap">
-  <div class="text"><img id="ling2" src="ling2.png"></div>
-  <div class="text"><img id="yi" src="yi.png"></div>
-  <div class="text"><img id="zhong" src="zhong.png"></div>
-  <div class="text"><img id="she" src="she.png"></div>
-  <div class="text"><img id="ji" src="ji.png"></div>
-</div>
-  <div class="wrap2">
-  <div class="text"><img id="ling" src="ling.png"></div>
-  <div class="text"><img id="yi" src="yi.png"></div>
-  <div class="text"><img id="zhong" src="zhong.png"></div>
-  <div class="text"><img id="she" src="she.png"></div>
-  <div class="text"><img id="ji" src="ji.png"></div>
-</div>
-<div class="wrap3">
-  <div class="text"><img id="shi" src="shi.png"></div>
-  <div class="text"><img id="yan" src="yan.png"></div>
-  <div class="text"><img id="shi2" src="shi2.png"></div>
-  <div class="text"><img id="gong" src="gong.png"></div>
-  <div class="text"><img id="zuo" src="zuo.png"></div>
-</div>
-<div class="wrap4">
-  <div class="text"><img id="shi2" src="shi2.png"></div>
-  <div class="text"><img id="ying" src="ying.png"></div>
-  <div class="text"><img id="zao" src="zao.png"></div>
-  <div class="text"><img id="shi2" src="shu.png"></div>
+  <div class="text draggable"><img id="ling" src="ling.png"></div>
+  <div class="text draggable"><img id="yi" src="yi.png"></div>
+  <div class="text draggable"><img id="zhong" src="zhong.png"></div>
+  <div class="text draggable"><img id="she" src="she.png"></div>
+  <div class="text draggable"><img id="ji" src="ji.png"></div>
+  <div class="text draggable"><img id="shi" src="shi.png"></div>
+  <div class="text draggable"><img id="yan" src="yan.png"></div>
+  <div class="text draggable"><img id="shi2" src="shi2.png"></div>
+  <div class="text draggable"><img id="gong" src="gong.png"></div>
+  <div class="text draggable"><img id="zuo" src="zuo.png"></div>
+  <div class="text draggable"><img id="shi2" src="shi2.png"></div>
+  <div class="text draggable"><img id="ying" src="ying.png"></div>
+  <div class="text draggable"><img id="zao" src="zao.png"></div>
+  <div class="text draggable"><img id="shi2" src="shu.png"></div>
 </div>
 
 </div>
