--- a/drag.html
+++ b/drag.html
@@ -1,53 +1,195 @@
-<html><head>
-	<meta charset="UTF-8">
-	<title></title>
-	<style type="text/css">
-		html,body{width: 100%; height: 100%;}
-		#container{width:100%; height: 100%; position:relative;}
-	</style>
-</head>
-<body>
 
-<div id="container"><div style="position: absolute; left: 0px; top: 0px; height: 90px; width: 90px; border-radius: 50%; background: url(&quot;img/paopao1.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.66; transform: translate(961px, 32px); text-align: center; line-height: 90px; font-size: 12px;">撞50次改大小</div><div style="position: absolute; left: 0px; top: 0px; height: 84px; width: 84px; border-radius: 50%; background: url(&quot;img/paopao2.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.99; transform: translate(198px, 119px); text-align: center; line-height: 84px; font-size: 12px; z-index: 1;">撞的心发慌</div><div style="position: absolute; left: 0px; top: 0px; height: 88px; width: 88px; border-radius: 50%; background: url(&quot;img/paopao1.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.64; transform: translate(50px, 160px); text-align: center; line-height: 88px; font-size: 12px; z-index: 1;">我要废了你</div><div style="position: absolute; left: 0px; top: 0px; height: 94px; width: 94px; border-radius: 50%; background: url(&quot;img/paopao5.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.95; transform: translate(351px, 53px); text-align: center; line-height: 94px; font-size: 12px; z-index: 1;">撞50次改大小</div><div style="position: absolute; left: 0px; top: 0px; height: 110px; width: 110px; border-radius: 50%; background: url(&quot;img/paopao2.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.83; transform: translate(866px, 349px); text-align: center; line-height: 110px; font-size: 12px;">来啊互相伤害</div><div style="position: absolute; left: 0px; top: 0px; height: 110px; width: 110px; border-radius: 50%; background: url(&quot;img/paopao2.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.94; transform: translate(690px, 494px); z-index: 1; text-align: center; line-height: 110px; font-size: 12px;">举头天花板</div><div style="position: absolute; left: 0px; top: 0px; height: 112px; width: 112px; border-radius: 50%; background: url(&quot;img/paopao1.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.97; transform: translate(873px, 112px); text-align: center; line-height: 112px; font-size: 12px; z-index: 1;">我要废了你</div><div style="position: absolute; left: 0px; top: 0px; height: 88px; width: 88px; border-radius: 50%; background: url(&quot;img/paopao4.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.74; transform: translate(106px, 636px); text-align: center; line-height: 88px; font-size: 12px; z-index: 1;">我要废了你</div><div style="position: absolute; left: 0px; top: 0px; height: 96px; width: 96px; border-radius: 50%; background: url(&quot;img/paopao3.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.61; transform: translate(644px, 25px); text-align: center; line-height: 96px; font-size: 12px;">撞的心发慌</div><div style="position: absolute; left: 0px; top: 0px; height: 84px; width: 84px; border-radius: 50%; background: url(&quot;img/paopao2.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.95; transform: translate(955px, 520px); text-align: center; line-height: 84px; font-size: 12px; z-index: 1;">试试就试试</div><div style="position: absolute; left: 0px; top: 0px; height: 96px; width: 96px; border-radius: 50%; background: url(&quot;img/paopao3.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.67; transform: translate(653px, 206px); text-align: center; line-height: 96px; font-size: 12px;">试试就试试</div><div style="position: absolute; left: 0px; top: 0px; height: 88px; width: 88px; border-radius: 50%; background: url(&quot;img/paopao1.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.94; transform: translate(795px, 207px); text-align: center; line-height: 88px; font-size: 12px; z-index: 1;">再撞下试试</div><div style="position: absolute; left: 0px; top: 0px; height: 86px; width: 86px; border-radius: 50%; background: url(&quot;img/paopao5.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.93; transform: translate(518px, 167px); z-index: 1; text-align: center; line-height: 86px; font-size: 12px;">撞三次改颜色</div><div style="position: absolute; left: 0px; top: 0px; height: 114px; width: 114px; border-radius: 50%; background: url(&quot;img/paopao1.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.72; transform: translate(344px, 171px); text-align: center; line-height: 114px; font-size: 12px;">撞的心发慌</div><div style="position: absolute; left: 0px; top: 0px; height: 116px; width: 116px; border-radius: 50%; background: url(&quot;img/paopao2.png&quot;) 0% 0% / cover; border: 0px solid rgb(0, 0, 0); opacity: 0.96; transform: translate(114px, 325px); text-align: center; line-height: 116px; font-size: 12px;">我要废了你</div></div>
+<!doctype html>
+<html lang="en">
 
-<script src="js/collision.min.js" type="text/javascript" charset="utf-8"></script>
-<script type="text/javascript">
-function rand(m,n){return m+parseInt((n-m)*Math.random());}
-var says=['撞三次改颜色','谁撞我','不想活了','来啊互相伤害','我要废了你','撞50次改大小','再撞下试试','试试就试试','窗前明月光','撞的心发慌','举头天花板','低头一肥皂'];
-var saysLength=says.length;
-var oC=document.getElementById('container');
-var mxwidth=oC.offsetWidth;
-var mxheight=oC.offsetHeight;
+	<head>
+		<meta charset="UTF-8" />
+		<title>小球碰撞</title>
+		<style type="text/css">
+			* {
+				margin: 0;
+				padding: 0;
+			}
+			#wrap {
+				height: 700px;
+				width: 100%;
+				/* border: 1px solid red; */
+				/*小球设置相对定位*/
+				position: relative;
+				margin: 0 auto;
+				overflow: hidden;
+			}
+			p {
+				width: 40px;
+				height: 40px;
+				border-radius: 50%;
+				background-color: white;
+				position: absolute;
+				top: 0;
+				left: 0;
+				color: black;
+				font-size: 25px;
+				text-align: center;
+				line-height: 40px;
+			}
+		</style>
+	</head>
 
-
-var oB=new BallBox('container');
-oB.ballRun();
-for(var i=0;i<15;i++){
-	var b=rand(40,60);
-	var x=rand(b,mxwidth-b);
-	var y=rand(b,mxheight-b);
-	var ball=new Ball({
-		'b':b,
-		'x':x,
-		'y':y,
-		'sx':rand(1,4),
-		'sy':rand(1,4),
-		'c':'url(img/paopao'+rand(1,6)+'.png)',
-		'opa':rand(60,100)/100,
-		'callBack':function(n){
-			//this.setB(rand(30,50));
-			//this.setM();
-			this.setOpa(rand(60,100)/100);
-			if(n%3==0){this.setC('url(img/paopao'+rand(1,6)+'.png)')};//撞三次改变下图片
-			if(n%50==0){
-				this.setB(rand(40+parseInt((n>1000?1000:n)/50),60+parseInt((n>1000?1000:n)/50)));
-			}//撞50次改大小
-			this.setHTML(says[rand(0,saysLength)]);
+	<body>
+		<div id="wrap">
+      <img id="ling" src="ling.png">
+      <img id="yi" src="yi.png">
+      <img id="zhong" src="zhong.png">
+		</div>
+	</body>
+	<!--<script src="js/common.js" type="text/javascript" charset="utf-8"></script>-->
+	<script type="text/javascript">
+		/**
+		 * 生成并返回一个从m到n全区间的随机数
+		 * @param {Object} m
+		 * @param {Object} n
+		 */
+		function randomNum(m, n) {
+			return Math.floor(Math.random() * (n - m + 1) + m);
 		}
-	});
-	oB.addBall(ball);
-}
-</script>
+		/**
+		 * 生成一个随机颜色，并返回rgb字符串值
+		 */
+		function randomColor() {
+			var r = randomNum(0, 255);
+			var g = randomNum(0, 255);
+			var b = randomNum(0, 255);
+			return "rgb(" + r + "," + g + "," + b + ")";
+		}
+		//获得wrapDiv
+		var wrapDiv = document.getElementById("wrap");
+		//定义数组存储所有的小球
+		var balls = [];
+		//生成小球函数
+		function createBalls() {
+			for (var i = 0; i < 20; i++) {
+				var ball = document.createElement("p");
+				//随机小球起始的X坐标和小球的Y坐标
+				ball.x = randomNum(0, 1200);
+				ball.y = randomNum(0, 700);
+				//随机小球的移动速度
+				// ball.speed = randomNum(2, 5);
+        ball.speed = 1;
+				//随机小球移动的方向
+				if (Math.random() - 0.5 > 0) {
+					ball.xflag = true;
+				} else {
+					ball.xflag = false;
+				}
+				if (Math.random() - 0.5 > 0) {
+					ball.yflag = true;
+				} else {
+					ball.yflag = false;
+				}
+				//随机小球的背景颜色
+				// ball.style.backgroundColor = randomColor();
+				ball.innerHTML = i + 1;
+				//将小球插入当wrapDiv中
+				wrapDiv.appendChild(ball);
+				//将所有的小球存储到数组中
+				balls.push(ball);
+			}
+		}
+		createBalls();
+		//小球移动函数，判断小球的位置
+		function moveBalls(ballObj) {
+			setInterval(function() {
+				ballObj.style.top = ballObj.y + "px";
+				ballObj.style.left = ballObj.x + "px";
+				//判断小球的标志量，对小球作出相应操作
+				if (ballObj.yflag) {
+					//小球向下移动
+					ballObj.y += ballObj.speed;
+					if (ballObj.y >= 800 - ballObj.offsetWidth) {
+						ballObj.y = 800 - ballObj.offsetWidth;
+						ballObj.yflag = false;
+					}
+				} else {
+					//小球向上移动
+					ballObj.y -= ballObj.speed;
+					if (ballObj.y <= 0) {
+						ballObj.y = 0;
+						ballObj.yflag = true;
+					}
+				}
+				if (ballObj.xflag) {
+					//小球向右移动
+					ballObj.x += ballObj.speed;
+					if (ballObj.x >= 1300 - ballObj.offsetHeight) {
+						ballObj.x = 1300 - ballObj.offsetHeight;
+						ballObj.xflag = false;
+					}
+				} else {
+					//小球向左移动
+					ballObj.x -= ballObj.speed;
+					if (ballObj.x <= 0) {
+						ballObj.x = 0;
+						ballObj.xflag = true;
+					}
+				}
+				crash(ballObj);
+			}, 10);
+		}
+		var x1, y1, x2, y2;
+		//碰撞函数
+		function crash(ballObj) {
+			//通过传过来的小球对象来获取小球的X坐标和Y坐标
+			x1 = ballObj.x;
+			y1 = ballObj.y;
+			for (var i = 0; i < balls.length; i++) {
+				//确保不和自己对比
+				if (ballObj != balls[i]) {
+					x2 = balls[i].x;
+					y2 = balls[i].y;
+					//判断位置的平方和小球的圆心坐标的关系
+					if (Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2) + 800 <= Math.pow(ballObj.offsetWidth + balls[i].offsetWidth, 2)) {
+						//判断传过来的小球对象，相对于碰撞小球的哪个方位
+						if (ballObj.x < balls[i].x) {
+							if (ballObj.y < balls[i].y) {
+								//小球对象在被碰小球的左上角
+								ballObj.yflag = false;
+								ballObj.xflag = false;
+							} else if (ballObj.y > balls[i].y) {
+								//小球对象在被碰小球的左下角
+								ballObj.xflag = false;
+								ballObj.yflag = true;
+							} else {
+								//小球对象在被撞小球的正左方
+								ballObj.xflag = false;
+							}
+						} else if (ballObj.x > balls[i].x) {
+							if (ballObj.y < balls[i].y) {
+								//小球对象在被碰撞小球的右上方
+								ballObj.yflag = false;
+								ballObj.xflag = true;
+							} else if (ballObj.y > balls[i].y) {
+								//小球对象在被碰撞小球的右下方
+								ballObj.xflag = true;
+								ballObj.yflag = true;
+							} else {
+								//小球对象在被撞小球的正右方
+								ballObj.xflag = true;
+							}
+						} else if (ballObj.y > balls[i].y) {
+							//小球对象在被撞小球的正下方
+							ballObj.yflag = true;
+						} else if (ballObj.y < balls[i].y) {
+							//小球对象在被撞小球的正上方
+							ballObj.yflag = false;
+						}
+					}
+				}
+			}
+		}
+		for (var i = 0; i < balls.length; i++) {
+			//将所有的小球传到函数中,来实现对小球的移动
+			moveBalls(balls[i]);
+		}
+	</script>
 
-
-</body></html>
+</html>
