--- a/drag.html
+++ b/drag.html
@@ -6,10 +6,22 @@
 </style>
 </head>
 <body>
-<div id="imgDiv" style="position: absolute; left: 100px; top: 26px;">
+<div id="imgDiv" style="position: absolute;">
     <link rel="stylesheet" href="style-drag.css">
-    <div><img class="text"id="ling" src="ling.png">
-         <img class="text"id="yi" src="yi.png">
+    <div id="wrap"><img class="text"id="ling" src="ling.png">
+         <img class="text"id="yi" src="yi2.png">
+         <img class="text"id="zhong" src="zhong.png">
+         <img class="text"id="she" src="she.png">
+         <img class="text"id="ji" src="ji.png">
+         <img class="text"id="gong" src="gong.png">
+         <img class="text"id="zuo" src="zuo.png">
+         <img class="text"id="shi2" src="shi2.png">
+         <img class="text"id="ying" src="ying.png">
+         <img class="text"id="zao" src="zao.png">
+         <img class="text"id="shu" src="shu.png">
+         <img class="text"id="shi" src="shi.png">
+         <img class="text"id="yan" src="yan.png">
+         <img class="text"id="shi2" src="shi2.png">
     </div>
 </div>
 
